# teal-verifier

./: .gitignore  .gitmodules  README.md  pyproject.toml
cbmc_transpiler/: AVMTranspiler.py  __init__.py
cli/: __init__.py  cbmc_utils.py  verify_contract.py
engine/: AVM_verify_template.cpp  bs_builder.h  cbmc_avm.h  cbmc_bounds.h  cbmc_opcodes.h  properties.h
examples/: counter.teal
teal-preprocess/: WIP.md  preprocess.py
teal-preprocess/codeql-TEAL/: .gitignore  README.md  codeql-workspace.yml
teal-preprocess/codeql-TEAL/codeql-analysis-tools/: bytearray-bounds-report.py  cfg-to-dot.py  codeql-analysis.py  combined-bounds-report.py  integer-bounds-report.py  scratch-space-report.py  stack-depth-report.py
teal-preprocess/codeql-TEAL/shared/tree-sitter-extractor/: Cargo.toml
teal-preprocess/codeql-TEAL/teal/: .gitignore
teal-preprocess/codeql-TEAL/teal/extractor/: Cargo.toml  rust-toolchain.toml
teal-preprocess/codeql-TEAL/teal/extractor-pack/: codeql-extractor.yml
teal-preprocess/codeql-TEAL/tealer-detections/: TealerCommon.qll  build_test_databases.sh  canCloseAccount.ql  canCloseAsset.ql  constantGtxn.ql  groupSizeCheck.ql  isDeletable.ql  isUpdatable.ql  missingFeeCheck.ql  qlpack.yml  rekeyTo.ql  selfAccess.ql  senderAccess.ql  test_tealer_detections.py  unprotectedDeletable.ql  unprotectedUpdatable.ql
template_generator/: JSON_SYNTAX.md  README.md  __init__.py  generator.py
tests/: conftest.py  test_bs_builder.py  test_cbmc_opcodes.py  test_template_generator.py  test_transpiler.py  test_verify_properties.py
(+110 files in other folders)
